Fix CORS 403 error - update security config and allowed origins